<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkateTime Toronto</string>
    <string name="detailsDialog_complex_desc">This is a default description. </string>
    <string name="detailsDialog_complex_type">Indoor Arena/Outdoor Rink</string>
    <string name="detailsDialog_complex_facilities">Changerooms, Washrooms, Rentals</string>
    <string name="detailsDialog_complex_number">416 123 4567</string>
    <string name="detailsDialog_goToMaps">Go Now</string>
    <string name="displayDateTextView_skateNowMessage">Skate Now!</string>
    <string name="displayDateTextView_skateNowMessage_2rows">Skate\nNow!</string>
    <string name="filter_FacilityTypeHeading">Facility Type</string>
    <string name="filter_IndoorArenaBox">Indoor Arena</string>
    <string name="filter_OutdoorRinkBox">Outdoor Rink</string>
    <string name="filter_AmenitiesHeading">Must-Have Amenities</string>
    <string name="filter_AmenitiesWashroom">Washroom</string>
    <string name="filter_AmenitiesChangeroom">Changeroom</string>
    <string name="filter_AmenitiesRentals">Rentals</string>
    <string name="filter_SkateTimesHeading">Skating Times</string>
    <string name="filter_SkateTimesMorning">Morning</string>
    <string name="filter_SkateTimesAfternoon">Afternoon</string>
    <string name="filter_SkateTimesEvening">Evening</string>
    <string name="progress_dialog_title_downloading">Downloading...</string>
    <string name="progress_dialog_title_connecting">Connecting...</string>
    <string name="progress_dialog_message_prefix_downloading">Downloading file</string>
    <string name="progress_dialog_message_prefix_connecting">Connecting to</string>
    <string name="user_message_download_complete">Download complete!</string>
    <string name="user_message_download_canceled">Download canceled!</string>
    <string name="error_message_bad_url">Error: Invalid URL!</string>
    <string name="error_message_file_not_found">Error: File not found!</string>
    <string name="error_message_general">Error downloading file!</string>
    <string name="scheduleUpdate_URL">http://54.171.139.204/updater.php?schedDate=</string>
</resources>
