<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/complexType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff000000"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:text="@string/detailsDialog_complex_type"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/complexNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailsDialog_complex_number"
        android:paddingBottom="10dp"
        android:layout_below="@+id/complexType"
        android:layout_centerHorizontal="true"
        android:textColor="#3394e4" />

    <TextView android:id="@+id/complexFacilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailsDialog_complex_facilities"
        android:paddingBottom="10dp"
        android:layout_below="@+id/complexNumber"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/complexDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailsDialog_complex_desc"
        android:layout_below="@+id/complexFacilities"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/complexDesc"
        android:orientation="horizontal"
        android:layout_margin="6dp">

         <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/goToComplexBtn"
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:text="Go Now" />

    </LinearLayout>

</RelativeLayout>